[package]
name = "serde-cw-value"
version = "1.0.0"
authors = ["Bartłomiej Kuras"]
edition = "2018"

description = "Serialization value trees for CosmWasm"
repository = "https://github.com/hashedone/serde-cw-value"
readme = "README.md"
keywords = ["serde"]
license = "MIT"

[dependencies]
serde = "^1.0.0"

[dev-dependencies]
serde_derive = "^1.0.0"
