[package]
name = "serde-value"
version = "0.7.0"
authors = ["arcnmx"]
edition = "2018"

description = "Serialization value trees"
documentation = "https://docs.rs/serde-value/*/serde_value/"
repository = "https://github.com/arcnmx/serde-value"
readme = "README.md"
keywords = ["serde"]
license = "MIT"

[dependencies]
serde = { version = "^1.0.0", default-features = false, features =["alloc"] }
ordered-float = { version = "3.7.0", default-features = false }

[dev-dependencies]
serde_derive = { version = "1.0.159"}
